# vim-dirdifftree

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.txt
autoload/: dirdifftree.vim
ftplugin/: dirdifftree.vim
plugin/: dirdifftree.vim
python3/: dirdifftree.py  dirdifftree_lib.py
syntax/: dirdifftree.vim
tests/: build_test_data.sh  test_dirdifftree.py
